emptypad/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: emptypad-service
  namespace: emptypad
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  - name: sync
    port: 90
    protocol: TCP
    targetPort: 90
  selector:
    app: emptypad
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
