emptypad/sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emptypad-deployment
  labels:
    app: emptypad
spec:
  selector:
    matchLabels:
      app: emptypad
  template:
    metadata:
      labels:
        app: emptypad
    spec:
      containers:
        - name: emptypad-nginx
          image: nginx
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: www-data
              mountPath: "/usr/share/nginx/html"
            - name: conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx-docs.conf
        - name: git-sync
          image: k8s.gcr.io/git-sync:v3.1.2
          volumeMounts:
            - name: www-data
              mountPath: /data

      volumes:
        - name: www-data
          emptyDir: {}
        - name: conf
          configMap:
            name: emptypad-website
---
apiVersion: v1
kind: Service
metadata:
  name: emptypad-service
  labels:
    run: nginx
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
  selector:
    app: emptypad
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: emptypad
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: emptypad-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: emptypad-redirect@kubernetescrd
spec:
  tls:
  - secretName: emptypad-cert
  rules:
  - host: emptypad.sachiniyer.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: emptypad-service
             port:
               number: 80
